--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,17 @@ uuid = "c3bfbc03-3e50-4bdd-8fa3-595579f96982"
 authors = ["Dominic <dchang3419@hotmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+Comrade = "99d987ce-9a1e-4df8-bc0b-1ea019aa547b"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Krang = "54806c32-d51a-438d-8447-e0041be2fbfb"
+Pigeons = "0eb8d820-af6a-4919-95ae-11206f830c31"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Pyehtim = "3d61700d-6e5b-419a-8e22-9c066cf00468"
+VIDA = "4096cdfb-f084-40a3-b02d-1a2a54920cb8"
+VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
+VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
+
 [compat]
 julia = "1"
