--- a/Project.toml
+++ b/Project.toml
@@ -9,14 +9,16 @@ ComradeBase = "6d8c423b-a35f-4ef1-850c-862fe21f82c4"
 CoordinateTransformations = "150eb455-5306-5404-9cee-2592286d6298"
 Cthulhu = "f68482b8-f384-11e8-15f7-abe071a5a75f"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
-GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Krang = "54806c32-d51a-438d-8447-e0041be2fbfb"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
 Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 Metal = "dde4c033-4e86-420c-a63e-0dd931031962"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
@@ -39,3 +41,6 @@ VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
 
 [compat]
 julia = "1"
+
+[extras]
+MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
