--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
+MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
 Meshes = "eacbb407-ea5a-433e-ab97-5258b1ca43fa"
 Metal = "dde4c033-4e86-420c-a63e-0dd931031962"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
@@ -38,6 +39,7 @@ TestImages = "5e47fb64-e119-507b-a336-dd2b206d9990"
 VIDA = "4096cdfb-f084-40a3-b02d-1a2a54920cb8"
 VLBIImagePriors = "b1ba175b-8447-452c-b961-7db2d6f7a029"
 VLBISkyModels = "d6343c73-7174-4e0f-bb64-562643efbeca"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [compat]
 julia = "1"
