--- a/Project.toml
+++ b/Project.toml
@@ -47,6 +47,7 @@ Pigeons = "0.4"
 Comrade = "0.9"
 VIDA = "0.11"
 Pyehtim = "0.1"
+Krang = "0.0.1"
 
 [extras]
 MPIPreferences = "3da0fdf6-3ccc-4f1b-acd9-58baa6c99267"
